fixed overflow

--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -2,4 +2,5 @@
   max-width: 1200px;
   padding: 0 30px;
   margin: 0 auto;
+  overflow: hidden;
 }
