--- a/src/styles/submenu.scss
+++ b/src/styles/submenu.scss
@@ -8,6 +8,7 @@
   width: 120px;
 
   &__list {
+    display: none;
     position: absolute;
     right: 120px;
     top: 0;
